Sync all content

--- a/content/resources/21w-747s05-th.md
+++ b/content/resources/21w-747s05-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21w-747-rhetoric-spring-2005/418fd62aeac99e7d517c19957cee88c6_21w-747s05-th.jpg
+file: /media/courses/21w-747-rhetoric-spring-2005/418fd62aeac99e7d517c19957cee88c6_21w-747s05-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Theodore Roosevelt standing on a table outdoors and making a speech to
@@ -11,8 +11,10 @@ image_metadata:
   credit: ''
   image-alt: Theodore Roosevelt making a speech.
 learning_resource_types: []
-ocw_type: OCWImage
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
+ocw_type: ''
 resourcetype: Image
 title: 21w-747s05-th.jpg
 uid: 418fd62a-eac9-9e7d-517c-19957cee88c6
 ---
+New image Upload
