--- a/content/resources/21w-747s05.md
+++ b/content/resources/21w-747s05.md
@@ -3,7 +3,7 @@ content_type: resource
 description: Theodore Roosevelt standing on a table outdoors and making a speech to
   men seated around him. (Image courtesy of Library of Congress, Prints and Photographs
   Division [reproduction number, LC-USZ62-95886 (b&w film copy neg.)])
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/21w-747-rhetoric-spring-2005/25e343794da6a8cd92dca525a1147375_21w-747s05.jpg
+file: /media/courses/21w-747-rhetoric-spring-2005/25e343794da6a8cd92dca525a1147375_21w-747s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Theodore Roosevelt standing on a table outdoors and making a speech to
@@ -13,8 +13,10 @@ image_metadata:
   credit: ''
   image-alt: Theodore Roosevelt making a speech.
 learning_resource_types: []
-ocw_type: OCWImage
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
+ocw_type: ''
 resourcetype: Image
 title: 21w-747s05.jpg
 uid: 25e34379-4da6-a8cd-92dc-a525a1147375
 ---
+Theodore Roosevelt standing on a table outdoors and making a speech to men seated around him. (Image courtesy of Library of Congress, Prints and Photographs Division [reproduction number, LC-USZ62-95886 (b&w film copy neg.)])
